<resources>
    <string name="app_name">Linux</string>
    <string name="title_ruby">Linux</string>
    <string name="form_btn_mas_tarde">Mas Tarde</string>
    <string name="form_btn_ingresar">Ingresar</string>
    <string name="form_btn_crear_cuenta">Crear Cuenta</string>
    <string name="login_valido">Leonardo</string>
    <string name="clave_valida">1234</string>
    <string name="error_autenticar">usuario o password incorrectos</string>
    <string name="datos_guardados_correctamente">"Los datos se guardaron con exito "</string>
    <string name="btn_create_guardar">Guardar</string>
    <string name="btn_create_cancelar">Cancelar</string>
    <string name="title_login">Login</string>
    <string name="title_create_login_registro">Registro</string>
    <string name="usuario_create_login_registro">Usuario</string>
    <string name="pass_create_login_registro">Contraseña</string>
    <string name="correo_create_login_registro">Correo</string>
    <string name="modules">Módulos</string>
    <string name="tab_informacon">Información</string>
    <string name="tab_video">Vídeo</string>
    <string name="tab_examen">Examen</string>
    <string name="escoge_medio_preferencia">Escoge el medio de preferencia :</string>
    <string name="mensaje_bien_venido">Bien venido :</string>
    <string name="mensaje_ocultar">Ocultar</string>
    <string name="mensaje_ocultar_toast">Ocultado</string>
    <string name="tiulo_progreso_menu_bar">Progreso</string>
    <string name="ayuda_sugerencia_ayuda">Ayuda</string>
    <string name="ayuda_sugerencia_recomendaciones">Recomendaciónes</string>
    <string name="ayuda_sugerencia_recomendaciones_resp">
        -Para un mejor uso de esta app se suguiere estar conectado a una red wifi.\n
        -No conectarse por medio de datos ya que los cargos generados pueden ser grandes.</string>
    <string name="ayuda_sugerencia_sugerencias">Sugerencias</string>
    <string name="ayuda_sugerencia_sugerencias_para">Para :</string>
    <string name="ayuda_sugerencia_sugerencias_correo">leomujicapalomares@gmail.com</string>
    <string name="ayuda_sugerencia_sugerencias_tema">Tema :</string>
    <string name="ayuda_sugerencia_sugerencias_mensage">Mensaje :</string>
    <string name="ayuda_sugerencia_sugerencias_enviar">Enviar</string>
    <string name="acerca_de_titulo_desarrollador">Desarrollador</string>
    <string name="acerca_de_nom_des">Nombre:</string>
    <string name="acerca_de_nom_des_rep">Leonardo Mujica Palomares</string>
    <string name="acerca_de_corr_des">Correo:</string>
    <string name="acerca_de_corr_des_rep">leomujicapalomares@gmail.com</string>
    <string name="acerca_de_titulo_asignatura">Asignatura</string>
    <string name="acerca_de_nom_asig">Nombre:</string>
    <string name="acerca_de_nom_asig_res">Desarrollo de aplicaciónes III.</string>
    <string name="acerca_de_prof_asig">Profesor:</string>
    <string name="acerca_de_prof_asig_res">Rodriguez Garcia Anastacio.</string>
    <string name="acerca_de_titulo_universidad">Universidad</string>
    <string name="acerca_de_nombre_uni">Nombre:</string>
    <string name="acerca_de_nombre_uni_res">Universidad Tecnológica del Norte de Guanajuato.</string>
    <string name="acerca_de_ubicacion_uni">Ubicación:</string>
    <string name="acerca_de_ubicacion_uni_res">Dolores Hidalgo, Cuna de la independencia nacional.</string>
    <string name="titulo_calificacion">Calificación</string>
    <string name="calificacion_enviar">Enviar</string>
    <string name="calificacion_resultado">Resultado :</string>
    <string name="title_herramientas">Herramientas</string>
    <string name="btn_calculadora">Herramientas</string>
    <string name="titulo_configuracion">Configuraciónes</string>
    <string name="configuracion_titulo_notificaciones">Notificaciónes</string>
    <string name="configuracion_activar_notificaciones">Activar</string>
    <string name="configuracion_desactivar_notificaciones">Desactivar</string>
    <string name="configuracion_titulo_audio">Audio</string>
    <string name="configuracion_titulo_almacenamiento">Almacenamiento</string>
    <string name="configuracion_interno_almacenamiento">Interno</string>
    <string name="configuracion_externo_almacenamiento">Externo</string>
    <string name="nota_tipo_almacenamiento">Nota: El almacenamiento solo se puede eleguir al momento de crear la cuenta</string>
    <string name="usuario_informacion_titulo">Información</string>
    <string name="usuario_informacion_nombre">Nomre: </string>
    <string name="usuario_informacion_nombre_res">Leonardo Mujica Palomares</string>
    <string name="usuario_informacion_correo">Correo: </string>
    <string name="usuario_informacion_correo_res">leomujicapalomares@gmail.com</string>
    <string name="usuario_informacion_puntos">Puntos: </string>
    <string name="btn_cronometro">Cronometro</string>
    <string name="btn_Calculadora">Calculadora</string>
    <string name="edt_herramienta">Herramientas</string>
    <string name="usuario_informacion_puntos_res">123 pt</string>
    <string name="menu_bar_progreso_on">Progreso</string>
    <string name="menu_bar_usuario_on">Información del usuario</string>
    <string name="menu_bar_grafica_on">Gráfica de aprovechamiento</string>
    <string name="menu_bar_configuracion_on">Configuraciónes</string>
    <string name="menu_bar_calificar_app_on">Calificar app</string>
    <string name="menu_bar_acerca_de_on">Acerca de</string>
    <string name="menu_bar_heramientas">Herramientas</string>
    <string name="menu_bar_ayuda_sugerencia_on">Ayuda y sugerencias</string>
    <string name="menu_bar_salir_on">Salir</string>
    <string name="menu_bar_juego">UTNG</string>
    <string name="menu_bar_video">VIDEO</string>
    <string name="menu_bar_acerca_de_off">Acerca de</string>
    <string name="menu_bar_ayuda_sugerencia_off">Ayuda y sugerencias</string>
    <string name="menu_bar_cambiar_tema">Cambiar tema</string>
    <string name="menu_bar_juegos_dinamicos">Juegos Dinamcos</string>
    <string name="menu_bar_juegos_noticias">Noticias</string>
    <string name="menu_bar_salir_off">Salir</string>
    <string name="confirm_pass_create_login_registro">Confirma la contraseña</string>
    <string name="title_menssage_error_uno">Atención!!</string>
    <string name="title_menssage_error_dos">Atención, campos requeridos!!</string>
    <string name="button_menssage_error">Aceptar</string>
    <string name="menssage_error_pass_different">Las contraseñas no coinsiden</string>
    <string name="cuestionario_comprobar">Comprobar</string>
    <string name="calificaciones_examenes">Calificaciónes de los examenes</string>
    <string name="title_activity_ultimas_noticias">Últimas Noticias</string>
    <string name="title_activity_noticia">Noticia</string>
    <string name="titulo">Títutlo</string>
    <string name="descripcion">Descripción</string>
    <string name="html_tema_concluido_off">
        <![CDATA[
            <div>
              <div>
                 <p>
                  <font color="#000000">
                     has concluido con exito el tema 1 :<i> Sobre Ruby</i>. Para poder continuar con el curso te recomendamos que te registres.
                  </font>
                 </p>
              </div>
           </div>
        ]]>
    </string>
     <string name="html_curso_concluido_parte_uno">
        <![CDATA[
                     Has concluido con exito el curso de <i>Linux</i> <b>
        ]]>
    </string>
    <string name="html_curso_concluido_parte_dos">
        <![CDATA[
                     </b>. Para poder guardar tu calificación te recomendamos dar clic en el boton de ENVIAR.<br />
        ]]>
    </string>
    <string name="html_uno_sobre_ruby">
      <![CDATA[
            <div>
              <div>
                 <p>Instalar el sistema operativo es bastante sencillo ya que este cuenta con un asistente gráfico para
hacerlo. Simplemente defines la información necesaria y sigues el proceso de instalación de acuerdo a
cada pantalla que presenta el asistente.
                 </p>
                 <p>
                 <b>Nota</b>: Para instalar tu Sistema Operativo debes hacer lo siguiente:.
                  </p>
<p>1. Descargar la distribución Ubuntu Linux desde http://www.ubuntu.com/download/desktop </p>
<p>2. Es recomendable descargar Ubuntu 12.04 LTS (tiene soporte para 5 años). </p>
<p>3. Preparar la imagen del Sistema Operativo Ubuntu Linux en un DVD o USB. </p>
<p>4. Iniciar el ordenador con el DVD o USB y cargar el Sistema Operativo en modo vivo. </p>

              </div>
           </div>
        ]]>
    </string>
    <string name="html_uno_medio_ambiente_configuracion">
       <![CDATA[
            <div>
              <div>
                 <p>Luego de instalar el Sistema Operativo e iniciar una sesión con el entorno de trabajo Unity, este
presentará un aspecto de interfaz gráfica
                 </p>
                 <p>
                 <b>Nota</b>: En general, el escritorio de trabajo esta compuesto por:

                  </p>
<p>1. El botón de Inicio</p>
<p>2. El Tablero del sistema </p>
<p>3. El Lanzador de aplicaciones.</p>
<p>4. La barra superior de opciones </p>

              </div>
           </div>
        ]]>
    </string>
    <string name="html_uno_sintaxis">
         <![CDATA[
            <div>
              <div>
               <p>Haz terminado de instalar el nuevo sistema operativo, ya hiciste un pequeño recorrido
por la interfaz gráfica pero quieres descubrir otras características de esta distribución
Gnu Linux.</p>
 <p>Prueba lo siguiente:</p>
 <p>1. Presiona la tecla Meta (windows) para abrir el Tablero rápidamente.</p>
 <p>También puedes presionar la tecla Meta por al menos tres segundos para habilitar
el Lanzador con los íconos enumerados.</p>
 <p>Además, puedes utilizar las siguientes combinaciones de teclas que te ayudarán
para interactuar mejor con el sistema operativo.</p>
 <p>Tecla Meta y la S para activar las áreas de trabajo</p>
 <p> Ahora abre la carpeta personal, el procesador de textos, la aplicación de hojas de cálculo
y luego presionar: la tecla Meta y la W para activar el modo expo de las ventanas.</p>
 <p>Además, puedes presionar simultáneamente Alt Tab para navegar entre las miniaturas
de las aplicaciones abiertas y seleccionar la que necesites.</p>



              </div>
           </div>
        ]]>
    </string>
    <string name="html_uno_palabras_reservadas">
       <![CDATA[
            <div>
              <div>
              <p> Al terminar de instalar el Sistema Operativo, también se instalan muchas aplicaciones de serie que los
desarrolladores han considerado como básicas para el uso diario. A continuación se mencionan algunas
de las principales aplicaciones que se tienen disponibles.</p>
<p>
Como accesorios se tienen: Calculadora, Editor de texto, Gestor de archivadores, Brasero (quemador de
discos), Dejá Dup (respaldos), Terminal y otras. Para utilizar dichas aplicaciones bastará con presionar
el botón Inicio, digitar el nombre de la aplicación y hacer clic sobre el icono.</p>
<p>Gestor de archivadores: para trabajar con los archivos que tienen compresión.</p>
<p>Brasero: sirve para crear cd-dvd con archivos multimedia o con datos informáticos.</p>
<p>Déja Dup: para realizar copias de respaldo.</p>
<p>Terminal: permite trabajar en modo de consola, es bastante útil para usuarios intermedios y avanzados.</p>
<p>Para ver los juegos instalados, puedes hacerlo desde el Tablero, filtrando la búsqueda por la categoría
Juegos.
</p>
<p>De esta manera, utilizando los filtros por categoría que se encuentran al lado derecho del Tablero,
puedes identificar las aplicaciones instaladas en el sistema.</p>
              </div>
           </div>
        ]]>
    </string>
</resources>