<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mi_menu_ramon_app="http://schemas.android.com/apk/res-auto"
    tools:context="mx.edu.utng.aprendelinux.ListViewLoginActivity"
    >
    <item
        android:id="@+id/itm_actionbar_menu_progreso_on"
        android:title="@string/menu_bar_progreso_on"
        mi_menu_ramon_app:showAsAction="always"></item>
    <item
        android:id="@+id/itm_actionbar_menu_usuario_on"
        android:title="@string/menu_bar_usuario_on"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_menu_configuraciones_on"
        android:title="@string/menu_bar_configuracion_on"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_menu_calificar_app"
        android:title="@string/menu_bar_calificar_app_on"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_menu_acerca_de_on"
        android:title="@string/menu_bar_acerca_de_on"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_menu_ayu_suge_on"
        android:title="@string/menu_bar_ayuda_sugerencia_on"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_herramientas"
        android:title="@string/menu_bar_heramientas"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_menu_juego"
        android:title="@string/menu_bar_juego"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_juegos"
        android:title="@string/menu_bar_juegos_dinamicos"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_noticias"
        android:title="@string/menu_bar_juegos_noticias"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_video"
        android:title="@string/menu_bar_video"
        mi_menu_ramon_app:showAsAction="never"></item>

    <item
        android:id="@+id/itm_actionbar_menu_salir_on"
        android:title="@string/menu_bar_salir_on"
        mi_menu_ramon_app:showAsAction="never"></item>

</menu>