<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mi_menu_ramon_app="http://schemas.android.com/apk/res-auto"
    tools:context="mx.edu.utng.aprendelinux.ListViewLoginActivity"
    >
    <item
        android:id="@+id/itm_actionbar_menu_acerca_de_off"
        android:title="@string/menu_bar_acerca_de_off"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_menu_ayu_suge_off"
        android:title="@string/menu_bar_ayuda_sugerencia_off"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_menu_salir_off"
        android:title="@string/menu_bar_salir_off"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_juegos"
        android:title="@string/menu_bar_juegos_dinamicos"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_noticias"
        android:title="@string/menu_bar_juegos_noticias"
        mi_menu_ramon_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_actionbar_video"
        android:title="@string/menu_bar_video"
        mi_menu_ramon_app:showAsAction="never"></item>

    <item
        android:id="@+id/itm_actionbar_herramientas"
        android:title="@string/menu_bar_heramientas"
        mi_menu_ramon_app:showAsAction="never"></item>

</menu>