<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarThumbVertical="@drawable/mi_scroll"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5pt"
        android:paddingRight="5pt"
        android:paddingTop="5pt"
        android:paddingBottom="10pt"
        android:layout_margin="5pt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_configuracion"
            android:textColor="@color/negro"
            android:textSize="15pt"
            android:gravity="center"/>

        <TextView
            android:layout_marginTop="15pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracion_titulo_notificaciones"
            android:textSize="10pt"
            android:textColor="@color/negro"/>
        <RadioGroup
            android:layout_marginTop="5pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion_activar_notificaciones"
                android:textSize="9pt"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion_desactivar_notificaciones"
                android:textSize="9pt"/>
        </RadioGroup>
        <TextView
            android:layout_marginTop="15pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracion_titulo_audio"
            android:textSize="10pt"
            android:textColor="@color/negro"/>
        <Spinner
            android:layout_marginTop="5pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_audio"
            android:textSize="10pt">
        </Spinner>

        <TextView
            android:layout_marginTop="15pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracion_titulo_almacenamiento"
            android:textSize="10pt"
            android:textColor="@color/negro"/>
        <RadioGroup
            android:layout_marginTop="5pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion_interno_almacenamiento"
                android:textSize="9pt"
                android:enabled="false"
                android:checked="true"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion_externo_almacenamiento"
                android:textSize="9pt"
                android:enabled="false"/>
        </RadioGroup>
        <TextView
            android:layout_marginTop="3pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nota_tipo_almacenamiento"
            android:textSize="9pt"/>
    </LinearLayout>
</ScrollView>