<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5pt"
    android:paddingRight="5pt"
    android:paddingTop="5pt"
    android:paddingBottom="10pt">
    <TextView
        android:id="@+id/edt_info_titulo"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario_informacion_titulo"
        android:textSize="15pt"
        android:textColor="@color/negro"
        />
    <TextView
        android:id="@+id/edt_info_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_informacion_nombre"
        android:layout_below="@id/edt_info_titulo"
        android:textStyle="bold"
        android:textSize="10pt"
        android:textColor="@color/negro"
        android:layout_marginTop="15pt"/>
    <TextView
        android:textSize="10pt"
        android:id="@+id/txv_info_res_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_informacion_nombre_res"
        android:layout_below="@id/edt_info_titulo"
        android:layout_toRightOf="@id/edt_info_nombre"
        android:layout_marginTop="15pt"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:textSize="10pt"
        android:id="@+id/edt_info_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_informacion_correo"
        android:layout_below="@id/txv_info_res_nombre"
        android:textStyle="bold"
        android:textColor="@color/negro"
        android:layout_marginTop="10pt"/>
    <TextView
        android:textSize="10pt"
        android:id="@+id/txv_info_res_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_informacion_correo_res"
        android:layout_below="@id/txv_info_res_nombre"
        android:layout_toRightOf="@id/edt_info_correo"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:textSize="10pt"
        android:id="@+id/edt_info_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_informacion_puntos"
        android:layout_below="@id/txv_info_res_correo"
        android:textStyle="bold"
        android:textColor="@color/negro"
        android:layout_marginTop="10pt"/>
    <TextView
        android:textSize="10pt"
        android:id="@+id/edt_info_res_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_informacion_puntos_res"
        android:layout_below="@id/txv_info_res_correo"
        android:layout_toRightOf="@id/edt_info_puntos"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="5dp"
        />

</RelativeLayout>